--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@ header{
   z-index: 1; 
   max-width: 100%; 
 }
+.footer-menu{
+  list-style:none;
+}
+.footer-menu li a{
+  color:white;
+  text-decoration: none;
+}
 .main-menu li{
   display:inline;
   margin-left: 20px;
@@ -57,6 +64,7 @@ header{
 .main-menu li:hover a{
  text-decoration: underline;
 }
+
 .hamburger{
   display: none;
 }
