--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -1,6 +1,6 @@
 /* banner*/
 section.banner{
-    background-image: url('../img/banner/banner.jpg');
+    background-image: url('../../assets/img/banner/banner.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
